# ChitraMaya

./: .gitignore  ChitraMaya-Roadmap.xlsx  ChitraMaya-config.json  Compile-All-Engines.ps1  README.md  bug-report.yml  bug_report.yml  config.yml  feature-request.yml  feature_request.yml  model-sources.json  pyproject.toml  requirements.txt
chitramaya/: __init__.py  __main__.py  config.py  models.py  pipeline.py  server.py
chitramaya/mosaic/: add_mosaic.py  cli_config.py  pipeline.py  pipeline_utils.py  session.py  vr_projection.py
chitramaya/mosaic/core/: clip.py  scene.py  scene_tracker.py
chitramaya/mosaic/detector/: lada_yolo.py  yolo.py
chitramaya/mosaic/models/: __init__.py
chitramaya/mosaic/models/basicvsrpp/: __init__.py  (+4 more)
chitramaya/mosaic/restorer/: __init__.py  base_restorer.py  basicvsrpp_clip_restorer.py  basicvsrpp_trt_clip_restorer.py  clip_restorer.py  compositor.py  mosaic_clip_restorer.py  none_restorer.py  pseudo_clip_restorer.py  pseudo_restorer.py
chitramaya/mosaic/utils/: image_utils.py  mask_utils.py
chitramaya/static/: swap.css  tokens.css
chitramaya/static/js/: api.js  init.js  mosaic.js  params.js  player.js  sbs_viewer.js  state.js
chitramaya/templates/: ui.html
chitramaya/video/: decoder.py  encoder.py
packaging/windows/: chitramaya-packager.ps1  chitramaya.spec  chitramaya_entrypoint.py  pyinstaller_runtime_hook_chitramaya.py
tools/: compile_basicvsrpp.py  compile_yolo.py  diag_backend_sweep.py  diag_controlled.py  diag_detection.py  diag_scan_frames.py  process_mosaic.py  verify_vr_projection.py  verify_wiring.py
